# TDT4173-bretzel-baguette

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: material_receival_visualization.ipynb
src/modern_ml/: kaggle_metric.py
