[project]
name = "modern-ml-in-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Yannick Rudolf",email = "yannick.rudolf@yahoo.de"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "modern_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
